<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DABster</string>
    <string name="connect">Connect</string>
    <string name="ConnectDevice">Please connect Dab accessory</string>
    <string name="usb">USB</string>
    <string name="menu_settings">menu settings</string>
    <string name="location">Location:</string>
    <string name="scan">Scan</string>
    <string name="scan_service">Scan Service</string>
    <string name="scanning">Scanning…</string>
    <string name="btn_text_Settings">Settings</string>
    <string name="settings_header_general">General</string>
    <string name="settings_start_on_usb">Automatic start on USB device detection</string>
    <string name="settings_text_startOnUsbAttached_Off">When disabled then this app does not automatically start when DAB USB device is attached.</string>
    <string name="settings_text_startOnUsbAttached_On">When enabled then this app automatically starts when DAB USB device is attached. Note: This may result in starting the app every time when the device is started.</string>
    <string name="settings_BackgroundBoxes">Show borders around slideshow picture and station list</string>
    <string name="StationName">Station</string>
    <string name="settings_header_layout">Layout</string>
    <string name="settings_additional_infos">Show additional infos in station list</string>
    <string name="settings_text_additional_infos">Note: The app will restart if this setting is changed.</string>
    <string name="dialog_heading_confirmation">Confirmation</string>
    <string name="Delete">Delete</string>

    <string name="scanningz">scanning</string>
    <string name="Experimental" />
    <string name="settings_RecordButton">Enable audio recording</string>
    <string name="settings_header_about">Info</string>
    <string name="ServiceID">Service-ID</string>
    <string name="Frequency">Frequency</string>
    <string name="PTY">PTY</string>
    <string name="Bitrate">Bitrate</string>
    <string name="Ensemble">Ensemble</string>
    <string name="SignalQuality">Signal Quality</string>
    <string name="waitfewseconds">Please wait …</string>
    <string name="selectfavoritesfirst">Please select favorite stations first</string>
    <string name="scanfirst">Please perform scan first</string>
    <string name="dialog_select_scantype_caption">Station scan method</string>
    <string name="text_full_scan">Replace entire station list</string>
    <string name="text_incr_scan">Update station list</string>
    <string name="settings_header_stationlogos">Station logos</string>
    <string name="settings_ShowStationLogoInList">Show logos in station list</string>
    <string name="settings_LogoAsMot">Show station logo as slide show picture</string>
    <string name="settings_text_logos_explain_sync">If you add or delete files, you need to perform a synchronisation afterwards.</string>
    <string name="settings_text_logos_explain_download">1. Download a station logo zip file from the VW website. Use Google with \"vw station logo download\". Select your country and the download of a zip file should start.\n2. Extract the zip. It will create a folder, which will contain all the png files.\n3. Copy the whole folder to the folder DAB/logos/ on your Android device.\n4. Press the Sync button.</string>
    <string name="Download_country_list">Download country list</string>
    <string name="Download_logos_for_country">Download logos for</string>
    <string name="settings_OnStartByUsbGotoBackground">Remain in background on automatic start</string>
    <string name="NoLogoFoundForXstations">No logo found for %1$d stations</string>
    <string name="AmbiguousLogosForX">Ambiguous logos for \'%1$s\'</string>
    <string name="settings_automaximize">Hide station list automatically</string>
    <string name="settings_text_automaximize">Hide station list automatically after</string>
    <string name="settings_max_scale_factor">Image scale factor</string>
    <string name="settings_text_max_scale_factor">Scale station logo and slide show picture up to a maximum of</string>
    <string name="AudioCodec">Audio Codec</string>
    <string name="AudioCodecMP2">MP2</string>
    <string name="AudioCodecAAC">HE-AAC</string>
    <string name="AudioSampleRate">Sample Rate</string>
    <string name="settings_SendBroadcastIntent">Broadcast information as Android Intent to other apps</string>
    <string name="FileExplorerAppNotInstalled">No file explorer app installed</string>
    <string name="Notice">Notice</string>
    <string name="stationlogovolkswagen_condition">The following downloads station logos, which are made available publicly by Volkswagen. The logos are only provided for use in Volkswagen Radio systems. No other use is permitted.\n\nAgree with these conditions and continue?</string>
    <string name="Connecting">Connecting …</string>
    <string name="UsbPermission">USB permission …</string>
    <string name="attemptXofY">attempt %1$d of %2$d…</string>
    <string name="settings_text_OnStartByUsbGotoBackground">If enabled, the app remains in background after it was started automatically.</string>
    <string name="settings_text_declip_notification">Show a short notification when audio distortions have been filtered.</string>
    <string name="N_logos_in">logos in</string>
    <string name="btn_text_Sync">Sync</string>
    <string name="Synchronisation">Synchronisation</string>
    <string name="text_favo_scan">Replace, keep favourites</string>
    <string name="Disabled">Disabled</string>
    <string name="settings_dim">Image brightness</string>
    <string name="settings_dim_text">Swipe down on the station logo or slide show picture to reduce its brightness. Swipe up to change back to its original brightness.\nAdjust the brightness to</string>
    <string name="settings_text_dim_dlg">First set the screen brightness of the device to night mode,\nthen adjust the image brightness.</string>
    <string name="settings_text_ServiceFollowing">Enabling Service Following will make the app follow radio services across different transmission frequencies. Touching the signal bar icon will manually initiate a service following attempt.</string>
    <string name="settings_ServiceFollowing">Service Following</string>
    <string name="settings_declip">Suppress audio distortions</string>
    <string name="settings_text_declip">If enabled, then distorted audio samples are replaced with silence.\nAttention: This option increases CPU load.</string>
    <string name="settings_header_audio">Audio</string>
    <string name="audio_distortion_notification">DAB audio distortion suppressed</string>
    <string name="settings_audioloss_support">Audio management support</string>
    <string name="settings_text_audioloss_support">Allow other apps to take over audio focus transiently.\nFor example, during voice recognition or speed camera warnings.\nAdjust the volume reduction via the control.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dls_example_string">Scrolling text \"Dynamic Label Segment DLS\"</string>
    <string name="color_like">same color as %1$s</string>
    <string name="density">unknown</string>
    <string name="settings_AudioLevel">Sound volume</string>
    <string name="Hints">Hints</string>
    <string name="next">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="colored">colorful</string>
    <string name="settings_MotSlideshow">Show MOT slide show</string>
    <string name="settings_SwapPrevNextFromSWC">Swap the reaction to NEXT and PREV commands</string>
    <!-- <string name="app_Version">AndroidAutoShop-1.0</string> <string name="date">03.10.18</string> -->
    <string name="channel_name">Default</string>
    <string name="channel_description">Dabster channel</string>
    <string name="ServiceFollowing">Service Following</string>
    <string name="pref_serviceFollowing">true</string>
    <string name="SuppressNoise">Suppress noise</string>
    <string name="pref_suppressNoise">true</string>
    <string name="ShowClock">Show clock on bottom bar</string>
    <string name="pref_showClock">true</string>
    <string name="PresetPages">Number of preset pages</string>
    <string name="pref_presetPages">2</string>
    <string name="StartUsb">Automatic start on USB device detection</string>
    <string name="pref_startUsb">false</string>
</resources>
